--- a/ERPWeb/Views/AgroConfiguration/GetMRawmaterialIssueList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetMRawmaterialIssueList.cshtml
@@ -45,8 +45,8 @@
 
                     <div class="row" style="margin-top:-30px">
                         <div class="col-md-12">
-                            <div class="card card-gray-dark shadow">
-                                <div class="card-header">
+                            <div class="card" style="background-color:#001f3f">
+                                <div class="px-2 py-1">
                                     <div class="row text-sm">
                                         <div class="col-md-2">
                                             <h5>Search by:</h5>
@@ -201,14 +201,14 @@
                 @*stock*@
                 <div class="tab-pane fade show active" id="custom-tabs-two-pstockrawmaterialqty" role="tabpanel" aria-labelledby="custom-tabs-two-pstockrawmaterialqty-tab">
 
-                    <div class="row" style="margin-top:-30px">
+                    <div class="row" style="margin-top:-35px">
                         <div class="col-md-12">
-                            <div class="card card-gray-dark shadow">
-                                <div class="card-header">
+                            <div class="card" style="background-color:#001f3f">
+                                <div class="px-2 py-1">
                                     <div class="row text-sm">
-                                        <div class="col-md-2">
+                                        @*<div class="col-md-2">
                                             <h5>Search by:</h5>
-                                        </div>
+                                        </div>*@
                                         <div class="col-md-3 float-right">
                                             <input type="text" class="form-control form-control-sm" id="searchByAnyy" placeholder="Search by any" />
 
@@ -223,10 +223,10 @@
 
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row"style="margin-top:-3px">
                         <div class="col-md-12" style="margin-top:-10px">
                             <div class="card ">
-                                <div class="card-body">
+                                <div class="card-body"style="margin-top:-10px">
                                     <div class="row">
                                         <div class="col-md-12 text-sm text-sm" id="dataContainer3" style="overflow-y:scroll">
                                             
