--- a/ERPWeb/Views/AgroConfiguration/GetRawMaterial.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetRawMaterial.cshtml
@@ -9,13 +9,13 @@
 <div class="row" style="margin-top:-10px">
     <div class="col-md-12">
 
-        <div class="row" style="margin-top:-15px">
+        <div class="row" style="margin-top:-12px">
             <div class="col-md-12"style="height:60px;text-align:center">
-                <div class="card card-navy">
-                    <div class="card-header">
+                <div class="card"style="background-color:#001f3f">
+                    <div class="px-2 py-1">
                         <div class="row text-sm">
                             <div class="col-md-2">
-                                <h5 class=" text-bold float-left">
+                                <h5 class=" text-bold float-left text-white">
                                     Raw Material Setup
                                 </h5>
                             </div>
@@ -31,7 +31,7 @@
                             </div>
 
                             <div class="col-md-3">
-                                <button class="btn btn-outline-warning btn-flat btn-sm float-right" id="btnAdd"><i class="fa fa-plus"></i>Add New Metarial</button>
+                                <button class="btn btn-outline-warning btn-sm float-right" id="btnAdd"><i class="fa fa-plus"></i>Add New Metarial</button>
 
                             </div>
                         </div>
@@ -42,7 +42,7 @@
 
 
     </div>
-    <div class="col-md-12" style="margin-top:-10px">
+    <div class="col-md-12" style="margin-top:-15px">
         <div class="card py-2">
             @*<div class="card-body">*@
             <div class="col-md-12" id="dataContainer">
