--- a/ERPWeb/Views/AgroConfiguration/GetStockiestList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetStockiestList.cshtml
@@ -40,14 +40,14 @@
                 <div class="tab-pane fade show active" id="custom-tabs-two-StockiestList" role="tabpanel" aria-labelledby="custom-tabs-two-StockiestList-tab">
 
 
-                    <div class="row" style="margin-top:-30px">
+                    <div class="row" style="margin-top:-35px">
                         <div class="col-md-12"style="height:60px;text-align:center">
-                            <div class="card card-navy">
-                                <div class="card-header">
-                                    <div class="row">
+                            <div class="card" style="background-color:#001f3f">
+                                <div class="px-2 py-1">
+                                    <div class="row" style="vertical-align:middle">
 
                                         <div class="col-md-2">
-                                            <h4 class="float-left text-bold">Stockiest List</h4>
+                                            <h5 class="float-left text-bold text-white">Stockiest List</h5>
                                         </div>
                                         <div class="col-md-2">
 
@@ -71,15 +71,15 @@
 
                     </div>
 
-                    <div class="row" style="margin-top:-15px">
+                    @*<div class="row" style="margin-top:-15px">
                         <div class="col-md-12">
                             <div class="card card-gray-dark">
                                 
                             </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12" style="margin-top:-10px">
+                    </div>*@
+                    <div class="row" style="margin-top:-15px">
+                        <div class="col-md-12" style="margin-top:-1px">
                             <div class="card ">
                                 <div class="card-body"style="margin-top:-10px">
                                     <div class="col-md-12" id="sdataContainer">
@@ -96,14 +96,14 @@
                 @*Territory List *@
                 <div class="tab-pane fade show" id="custom-tabs-two-Territory" role="tabpanel" aria-labelledby="custom-tabs-two-Territory-tab">
 
-                    <div class="row" style="margin-top:-30px">
+                    <div class="row" style="margin-top:-35px">
                         <div class="col-md-12"style="height:60px;text-align:center">
-                            <div class="card card-navy">
-                                <div class="card-header">
+                            <div class="card" style="background-color:#001f3f">
+                                <div class="px-2 py-1">
                                     <div class="row">
 
                                         <div class="col-md-2 ">
-                                            <h4 class="text-center text-bold float-left">Territory List</h4>
+                                            <h5 class="text-center text-bold float-left text-white">Territory List</h5>
                                         </div>
                                         <div class="col-md-2 ">
 
@@ -123,16 +123,16 @@
                         </div>
                     </div>
 
-                    <div class="row" style="margin-top:-15px">
+                    @*<div class="row" style="margin-top:-15px">
                         <div class="col-md-12">
                             <div class="card card-gray-dark">
                                 
                             </div>
                         </div>
-                    </div>
+                    </div>*@
 
-                    <div class="row">
-                        <div class="col-md-12" style="margin-top:-10px">
+                    <div class="row"  style="margin-top:-15px">
+                        <div class="col-md-12" style="margin-top:-1px">
                             <div class="card">
                                 <div class="card-body" style="margin-top:-10px">
                                     <div class="col-md-12" id="tdataContainer">
@@ -150,13 +150,13 @@
                 <div class="tab-pane fade show" id="custom-tabs-two-Area" role="tabpanel" aria-labelledby="custom-tabs-two-Area-tab">
 
                     <div class="row">
-                        <div class="col-md-12"style="margin-top:-30px">
-                            <div class="card card-navy">
-                                <div class="card-header">
+                        <div class="col-md-12"style="margin-top:-35px">
+                            <div class="card" style="background-color:#001f3f">
+                                <div class="px-2 py-1">
                                     <div class="row">
 
                                         <div class="col-md-2 ">
-                                            <h4 class="text-center text-bold float-left">Area List</h4>
+                                            <h5 class="text-center text-bold float-left text-white">Area List</h5>
                                         </div>
                                         <div class="col-md-2">
 
@@ -178,15 +178,15 @@
 
                     </div>
 
-                    <div class="row" style="margin-top:-15px">
+                    @*<div class="row" style="margin-top:-15px">
                         <div class="col-md-12">
                             
                         </div>
-                    </div>
+                    </div>*@
 
                     <div class="row">
 
-                        <div class="col-md-12" style="margin-top:-15px">
+                        <div class="col-md-12" style="margin-top:-13px">
                             <div class="card">
                                 <div class="card-body" style="margin-top:-10px">
                                     <div class="col-md-12" id="adataContainer">
@@ -203,14 +203,14 @@
                 @*Region List *@
                 <div class="tab-pane fade show" id="custom-tabs-two-Region" role="tabpanel" aria-labelledby="custom-tabs-two-Region-tab">
 
-                    <div class="row" style="margin-top:-30px">
+                    <div class="row" style="margin-top:-35px">
                         <div class="col-md-12">
-                            <div class="card card-navy">
-                                <div class="card-header">
+                            <div class="card" style="background-color:#001f3f">
+                                <div class="px-2 py-1">
                                     <div class="row">
 
                                         <div class="col-md-2">
-                                            <h4 class="text-center text-bold float-left">Region List</h4>
+                                            <h5 class="text-center text-bold float-left text-white">Region List</h5>
                                         </div>
                                         <div class="col-md-2">
 
@@ -232,13 +232,13 @@
 
                     </div>
 
-                    <div class="row" style="margin-top:-15px">
+                    @*<div class="row" style="margin-top:-15px">
                         <div class="col-md-12">
                             
                         </div>
-                    </div>
+                    </div>*@
 
-                    <div class="row" style="margin-top:-15px">
+                    <div class="row" style="margin-top:-13px">
                         <div class="col-md-12">
                             <div class="card">
                                 <div class="card-body" style="margin-top:-10px">
@@ -256,13 +256,13 @@
                 @*Division List *@
                 <div class="tab-pane fade show" id="custom-tabs-two-Division" role="tabpanel" aria-labelledby="custom-tabs-two-Division-tab">
 
-                    <div class="row" style="margin-top:-30px">
+                    <div class="row" style="margin-top:-35px">
                         <div class="col-md-12">
-                            <div class="card card-navy">
-                                <div class="card-header">
+                            <div class="card" style="background-color:#001f3f">
+                                <div class="px-2 py-1">
                                     <div class="row">
                                         <div class="col-md-2">
-                                            <h4 class="text-center text-bold float-left">Division List</h4>
+                                            <h5 class="text-center text-bold float-left text-white">Division List</h5>
                                         </div>
                                         <div class="col-md-2">
                                         </div>
@@ -280,14 +280,14 @@
                         </div>
                     </div>
 
-                    <div class="row" style="margin-top:-15px">
+                    @*<div class="row" style="margin-top:-15px">
                         <div class="col-md-12">
                             
                         </div>
-                    </div>
+                    </div>*@
 
                     <div class="row">
-                        <div class="col-md-12" style="margin-top:-15px">
+                        <div class="col-md-12" style="margin-top:-13px">
                             <div class="card">
                                 <div class="card-body"style="margin-top:-10px">
                                     <div class="col-md-12" id="ddataContainer">
@@ -301,13 +301,13 @@
 
                 @*Zone List *@
                 <div class="tab-pane fade show " id="custom-tabs-two-Zone" role="tabpanel" aria-labelledby="custom-tabs-two-Zone-tab">
-                    <div class="row" style="margin-top:-30px">
+                    <div class="row" style="margin-top:-35px">
                         <div class="col-md-12">
-                            <div class="card card-navy">
-                                <div class="card-header">
+                            <div class="card" style="background-color:#001f3f">
+                                <div class="px-2 py-1">
                                     <div class="row">
                                         <div class="col-md-2">
-                                            <h4 class="text-center text-bold float-left">Zone List</h4>
+                                            <h5 class="text-center text-bold float-left text-white">Zone List</h5>
                                         </div>
                                         <div class="col-md-2">
                                         </div>
@@ -325,14 +325,14 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row" style="margin-top:-15px">
+                    @*<div class="row" style="margin-top:-15px">
                         <div class="col-md-12">
                             
                         </div>
-                    </div>
+                    </div>*@
 
                     <div class="row">
-                        <div class="col-md-12"style="margin-top:-15px">
+                        <div class="col-md-12"style="margin-top:-13px">
                             <div class="card">
                                 <div class="card-body"style="margin-top:-10px">
                                     <div class="col-md-12" id="zdataContainer">
@@ -416,7 +416,7 @@
             <div class="modal-body">
                 <form id="formDivision">
                     <input type="hidden" id="dhddivisionId" />
-                    <div class="col-md-10">
+                    <div class="col-md-12">
                         <label for="dddlZoneName" class="control-label">Zone Name</label>
                         @Html.DropDownList("dddlZoneNameInput", (IEnumerable<SelectListItem>)ViewBag.ddlZoneName, "--Select Zone--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
 
@@ -424,11 +424,11 @@
 
 
 
-                    <div class="col-md-10">
+                    <div class="col-md-12">
                         <label for="txtDivisionName" class="control-label">DivisionName</label>
                         <input type="text" id="dtxtDivisionName" class="form-control form-control-sm" />
                     </div>
-                    <div class="form-group col-md-5">
+                    <div class="form-group col-md-12">
                         <label for="ddlStatus" class="control-label">Status</label>
 
                         <select id="dddlStatus" class="form-control form-control-sm select2">
