--- a/ERPWeb/Views/AgroConfiguration/ProductionPriceList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/ProductionPriceList.cshtml
@@ -9,19 +9,26 @@
     <div class="col-md-12">
 
 
-        <div class="row" style="margin-top:-15px">
+        <div class="row" style="margin-top:-12px">
             <div class="col-md-12">
-                <div class="card card-navy">
-                    <div class="card-header" style="text-align: center;">
+                <div class="card" style="background-color:#001f3f">
+                    <div class="px-2 py-1">
                         <div class="row">
                             <div class="col-md-3">
-                                <input type="text" class="form-control form-control-sm" id="SearchAny" placeholder="FG Product Name" />
-                            </div>
-                            <div class="col-md-6">
-                                <h5 class="text-center text-bold">
+                                <h5 class=" text-bold float-left text-white">
                                     Production Cost/PC
                                 </h5>
                             </div>
+                            <div class="col-md-2">
+
+                            </div>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control form-control-sm" id="SearchAny" placeholder="FG Product Name" />
+                            </div>
+                            <div class="col-md-2">
+
+                            </div>
+
                             <div class="col-md-3">
                                 <a href="/AgroConfiguration/ProductionPriceCreate" class="btn btn-outline-warning btn-sm float-lg-right" id="btnAddNew"><i class="fa fa-plus"></i>Get ProductionPrice</a>
                             </div>
@@ -51,10 +58,10 @@
                 </div>
             </div>
         </div>*@
-        <div class="row">
+        <div class="row"style="margin-top:-3px">
             <div class="col-md-12" style="margin-top:-10px">
                 <div class="card ">
-                    <div class="card-body">
+                    <div class="card-body"style="margin-top:-10px">
                         <div class="col-md-12" id="dataContainer">
 
                         </div>
