--- a/ERPWeb/Views/AgroConfiguration/SaveRequisition.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/SaveRequisition.cshtml
@@ -29,7 +29,7 @@
             <div class="tab-content" id="custom-tabs-two-tabContent">
 
                 <div class="tab-pane fade show active" id="custom-tabs-two-singleRequisition" role="tabpanel" aria-labelledby="custom-tabs-two-singleRequisition-tab">
-                    <div class="col-md-12">
+                    <div class="col-md-12"style="margin-top:-15px" >
                         <div class="card card-navy">
                             <div class="card-header" style="text-align: center;">
 
@@ -87,9 +87,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-12" style="margin-top:10px">
+                        <div class="col-md-12" style="margin-top:-10px">
                             <div class="card">
-                                <div class="card-body">
+                                <div class="card-body"style="margin-top:-10px">
                                     <div class="col-md-12">
                                         <div class="row">
                                             <div class="col-md-12" style="overflow-y:scroll">
@@ -123,7 +123,7 @@
 
                 </div>
                 <div class="tab-pane fade show" id="custom-tabs-two-bundleRequisition" role="tabpanel" aria-labelledby="custom-tabs-two-bundleRequisition-tab">
-                    <div class="col-md-12">
+                    <div class="col-md-12"style="margin-top:-15px">
                         <div class="card card-navy">
                             <div class="card-header" style="text-align: center;">
 
@@ -180,7 +180,7 @@
                     </div>
                     <div class="col-md-12" style="margin-top:-10px">
                         <div class="card">
-                            <div class="card-body">
+                            <div class="card-body"style="margin-top:-9px">
                                 <div class="col-md-12">
                                     <div class="row">
                                         <div class="col-md-12" style="overflow-y:scroll">
