--- a/ERPWeb/Views/AgroConfiguration/_GetRequisitionDetails.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRequisitionDetails.cshtml
@@ -30,7 +30,7 @@
 
                 sl++;
         <tr>
-            <td>@sl</td>
+            <td class="text-center">@sl</td>
             <td class="text-center">@item.RawMaterialName</td>
             <td class="text-center">@item.UnitName</td>
             <td class="text-center">@item.RequisitionQuantity</td>
