--- a/ERPWeb/Views/AgroConfiguration/DateWiseCollection.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/DateWiseCollection.cshtml
@@ -14,58 +14,45 @@
     }
 </style>
 
-<div class="row text-sm" style="margin-top:-20px">
+<div class="row text-sm" style="margin-top:-15px">
     <div class="col-md-12">
 
         <div class="row" style="margin-top:-5px">
             <div class="col-md-12">
-                <div class="card card-navy">
-                    <div class="card-header" style="text-align: center;">
+                <div class="card "style="background-color:#001f3f">
+                    <div class="px-2 py-1" style="text-align: center;">
                         <div class="row">
-                            <div class="col-md-3">
-                            </div>
-                            <div class="col-md-6">
-                                <h5 class="text-center text-bold">
-                                    Date Wise Collection
+
+                            <div class="col-md-2">
+                                <h5 class="float-left text-bold text-white" style="">
+                                    Date Collection
                                 </h5>
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-md-2">
+                                @Html.DropDownList("ddlZoneName", (IEnumerable<SelectListItem>)ViewBag.ddlZoneName, "--Zone--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
                             </div>
+                            <div class="col-md-2">
+                                @Html.DropDownList("ddlDivisionName", (IEnumerable<SelectListItem>)ViewBag.ddlDivisionName, "--Division--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
+                            </div>
+                            <div class="col-md-2">
+                                @Html.DropDownList("ddlRegionname", (IEnumerable<SelectListItem>)ViewBag.ddlRegionname, "--Region--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
+                            </div>
+                            <div class="col-md-2">
+                                @Html.DropDownList("ddlareaname", (IEnumerable<SelectListItem>)ViewBag.ddlareaname, "--Area--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
+                            </div>
+
+
+                            <div class="col-md-2">
+                                @Html.DropDownList("ddlTerritoryName", (IEnumerable<SelectListItem>)ViewBag.ddlTerritoryName, "--Territory--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger pad" })
+                            </div>
+                            
                         </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-        <div class="row" style="margin-top:-10px">
-            <div class="col-md-12">
-                <div class="card card-gray-dark">
-                    <div class="card-header">
-                        <div class="row" style="margin-left:-20px">
-                            <div class="col-md-1">
-                                <h6 class="" style="font-size:15px;">Search by :</h6>
-                            </div>
-
+                        <div class="row">
                             <div class="col-md-2">
-                                @Html.DropDownList("ddlZoneName", (IEnumerable<SelectListItem>)ViewBag.ddlZoneName, "Zone", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
-                            </div>
-                            <div class="col-md-2">
-                                @Html.DropDownList("ddlDivisionName", (IEnumerable<SelectListItem>)ViewBag.ddlDivisionName, "Division", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
-                            </div>
-                            <div class="col-md-2">
-                                @Html.DropDownList("ddlRegionname", (IEnumerable<SelectListItem>)ViewBag.ddlRegionname, "Region", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
-                            </div>
-                            <div class="col-md-2">
-                                @Html.DropDownList("ddlareaname", (IEnumerable<SelectListItem>)ViewBag.ddlareaname, "Area", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
-                            </div>
 
-
-                            <div class="col-md-2 pad">
-                                @Html.DropDownList("ddlTerritoryName", (IEnumerable<SelectListItem>)ViewBag.ddlTerritoryName, "Territory", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger pad" })
                             </div>
-                            <div class="col-md-2">
-                                @Html.DropDownList("ddlStokiestName", (IEnumerable<SelectListItem>)ViewBag.ddlStokiestName, "Stockiest", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
+                            <div class="col-md-2" style="margin-top:3px">
+                                @Html.DropDownList("ddlStokiestName", (IEnumerable<SelectListItem>)ViewBag.ddlStokiestName, "--Stockiest--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
                             </div>
 
                             <div class="col-md-2 pad">
@@ -97,13 +84,17 @@
                                     </span>
                                 </div>
                             </div>
-
-                            @*<div class="col-md-1 input-group-append">
-            <button type="button" id="btnDownload" title="Download" class="btn btn-block btn-info btn-flat"><i class="fas fa-download"></i></button>
-        </div>*@
-
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="row" style="margin-top:-10px">
+            <div class="col-md-12">
+                <div class="card card-gray-dark">
+                    
                 </div>
             </div>
         </div>
