--- a/ERPWeb/Views/AgroConfiguration/FGProductAccept.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/FGProductAccept.cshtml
@@ -10,19 +10,25 @@
 
         @Html.AntiForgeryToken()
         <div class="tab-pane fade show active" id="custom-tabs-two-RawMaterialReturnList" role="tabpanel" aria-labelledby="custom-tabs-two-RawMaterialReturnList-tab">
-            <div class="row" style="margin-top:-15px">
+            <div class="row" style="margin-top:-12px">
                 <div class="col-md-12">
-                    <div class="card card-navy">
-                        <div class="card-header">
+                    <div class="card" style="background-color:#001f3f">
+                        <div class="px-2 py-1">
                             <div class="row">
+                                <div class="col-md-3">
+                                    <h5 class=" text-bold">
+                                        Pending FG Product
+                                    </h5>
+                                </div>
+                                <div class="col-md-2">
+
+                                </div>
                                 <div class="col-md-3 ">
                                     <input type="text" class="form-control form-control-sm" id="searchByAny" placeholder="Search by any" />
 
                                 </div>
-                                <div class="col-md-6">
-                                    <h5 class="text-center text-bold">
-                                        List Of Pending FG Product
-                                    </h5>
+                                <div class="col-md-3">
+
                                 </div>
 
                             </div>
@@ -30,11 +36,10 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-
+            <div class="row"style="margin-top:-2px">
                 <div class="col-md-12" style="margin-top:-10px">
                     <div class="card">
-                        <div class="card-body">
+                        <div class="card-body"style="margin-top:-10px">
                             <div class="col-md-12" id="dataContainer">
 
                             </div>
