--- a/ERPWeb/Views/AgroConfiguration/GetAgroSalesProductList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetAgroSalesProductList.cshtml
@@ -10,35 +10,15 @@
 
         @Html.AntiForgeryToken()
 
-        <div class="row" style="margin-top:-15px">
+        <div class="row" style="margin-top:-12px">
             <div class="col-md-12">
-                <div class="card card-navy">
-                    <div class="card-header">
+                <div class="card" style="background-color:#001f3f">
+                    <div class="px-2 py-1">
                         <div class="row">
-                            <div class="col-md-3">
-                            </div>
-                            <div class="col-md-6">
-                                <h5 class="text-center text-bold">
-                                    List Of Invoice & Challan
-                                </h5>
-                            </div>
-                            <div class="col-md-3">
-
-                                <a href="/AgroConfiguration/CreateAgroSalesProduct" class="btn btn-outline-warning btn-sm float-lg-right" id="btnAddNew"><i class="fa fa-plus"></i> Create Invoice</a>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12" style="margin-top:-15px">
-                <div class="card card-gray-dark">
-                    <div class="card-header">
-                        <div class="row justify-content-center">
                             <div class="col-md-2">
-                                <h5 class="text-right">Search By</h5>
+                                <h5 class=" text-bold text-white">
+                                    Invoice & Challan
+                                </h5>
                             </div>
                             <div class="col-md-2">
                                 <input type="text" class="form-control form-control-sm" id="searchByAny" placeholder="search Invoice" />
@@ -65,14 +45,26 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                            
+                            <div class="col-md-2">
 
+                                <a href="/AgroConfiguration/CreateAgroSalesProduct" class="btn btn-outline-warning btn-sm float-lg-right" id="btnAddNew"><i class="fa fa-plus"></i> Create Invoice</a>
+
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="row"style="margin-top:-3px">
+            @*<div class="col-md-12" style="margin-top:-15px">
+                <div class="card card-gray-dark">
+                    
+                </div>
+            </div>*@
             <div class="col-md-12" style="margin-top:-10px">
                 <div class="card">
-                    <div class="card-body">
+                    <div class="card-body"style="margin-top:-10px">
                         <div class="col-md-12" id="dataContainer">
 
                         </div>
