--- a/ERPWeb/Views/AgroConfiguration/GetDropList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetDropList.cshtml
@@ -8,19 +8,25 @@
     <div class="col-md-12">
 
 
-        <div class="row" style="margin-top:-15px">
+        <div class="row" style="margin-top:-12px">
             <div class="col-md-12">
-                <div class="card card-navy">
-                    <div class="card-header" style="text-align: center;">
+                <div class="card" style="background-color:#001f3f">
+                    <div class="px-2 py-1" style="text-align: center;">
                         <div class="row">
+                            <div class="col-md-3">
+                                <h5 class="float-left text-bold text-white">
+                                    Sales Drop List
+                                </h5>
+                            </div>
+                            <div class="col-md-2">
+
+                            </div>
                             <div class="col-md-3" >
 
                                 <input type="text" class="form-control form-control-sm" id="SearchInvoice" placeholder="search By invoice" />
                             </div>
-                            <div class="col-md-6">
-                                <h5 class="text-center text-bold">
-                                    Sales Drop List
-                                </h5>
+                            <div class="col-md-3">
+
                             </div>
 
                         </div>
@@ -32,10 +38,10 @@
 
 
 
-        <div class="row">
+        <div class="row" style="margin-top:-3px">
             <div class="col-md-12" style="margin-top:-10px">
                 <div class="card ">
-                    <div class="card-body">
+                    <div class="card-body"style="margin-top:-10px">
                         <div class="col-md-12" id="dataContainer">
 
                         </div>
