--- a/ERPWeb/Views/AgroConfiguration/GetFinishGoodRecipeList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetFinishGoodRecipeList.cshtml
@@ -13,19 +13,25 @@
 
         @Html.AntiForgeryToken()
 
-        <div class="row" style="margin-top:-15px">
+        <div class="row" style="margin-top:-13px">
             <div class="col-md-12">
-                <div class="card card-navy">
-                    <div class="card-header">
+                <div class="card" style="background-color:#001f3f">
+                    <div class="px-2 py-1">
                         <div class="row">
                             <div class="col-md-3">
+                                <h5 class="text-center text-bold float-left text-white">
+                                    List Of Finish Good Recipe
+                                </h5>
+                            </div>
+                            <div class="col-md-2">
+
+                            </div>
+                            <div class="col-md-2">
 
                                 @Html.DropDownList("ddlProductName", (IEnumerable<SelectListItem>)ViewBag.ddlProductName, "--ProductName--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
                             </div>
-                            <div class="col-md-6">
-                                <h5 class="text-center text-bold">
-                                    List Of Finish Good Recipe
-                                </h5>
+                            <div class="col-md-2">
+
                             </div>
                             <div class="col-md-3">
                                 @*@if (privilege != null && privilege.Add)
@@ -58,10 +64,10 @@
             </div>
         </div>*@
 
-        <div class="row">
+        <div class="row"style="margin-top:-1px">
             <div class="col-md-12" style="margin-top:-10px">
                 <div class="card ">
-                    <div class="card-body">
+                    <div class="card-body"style="margin-top:-10px">
                         <div class="col-md-12" id="dataContainer">
                             @*@{Html.RenderAction("GetFinishGoodRecipeList", "AgroConfiguration", new { @flag = "View" });}*@
                         </div>
