--- a/ERPWeb/Views/AgroConfiguration/GetProductwisesalesReport.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetProductwisesalesReport.cshtml
@@ -5,38 +5,21 @@
 }
 
 
-<div class="row text-sm" style="margin-top:-20px">
+<div class="row text-sm" style="margin-top:-15px">
     <div class="col-md-12">
 
         <div class="row" style="margin-top:-5px">
             <div class="col-md-12">
-                <div class="card card-navy">
-                    <div class="card-header" style="text-align: center;">
+                <div class="card" style="background-color:#001f3f">
+                    <div class="px-2 py-1" style="text-align: center;">
                         <div class="row">
-                            <div class="col-md-3">
-                            </div>
-                            <div class="col-md-6">
-                                <h5 class="text-center text-bold">
+                           
+                            <div class="col-md-4">
+                                <h5 class="float-left text-bold text-white">
                                     Product Wise Sales Statement
                                 </h5>
                             </div>
-                            <div class="col-md-3">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
 
-
-        <div class="row" style="margin-top:-10px">
-            <div class="col-md-12">
-                <div class="card card-gray-dark">
-                    <div class="card-header">
-                        <div class="row justify-content-center">
-                            <div class="col-md-2">
-                                <h5 class="text-right">Search By</h5>
-                            </div>
                             <div class="col-md-2">
                                 @Html.DropDownList("ddlProductName", (IEnumerable<SelectListItem>)ViewBag.ddlProductName, "--ProductName--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
                                 <span class="error hide req-ProductName font-weight-bold">Product Name is required!</span>
@@ -57,7 +40,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-2">
+                            <div class="col-md-1">
                                 <div class="input-group input-group-sm">
                                     <select class="form-control form-control-sm float-right" id="rptType" name="rptType">
                                         <option value="PDF">PDF</option>
@@ -68,14 +51,24 @@
                                     </span>
                                 </div>
                             </div>
+                           
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+
+
+        <div class="row" style="margin-top:-3px">
+            @*<div class="col-md-12">
+                <div class="card card-gray-dark">
+                   
+                </div>
+            </div>*@
 
             <div class="col-md-12" style="margin-top:-10px">
                 <div class="card">
-                    <div class="card-body">
+                    <div class="card-body"style="margin-top:-10px">
                         <div class="col-md-12" id="dataContainer">
 
                         </div>
