--- a/ERPWeb/Views/AgroConfiguration/GetRawMaterialSupplier.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetRawMaterialSupplier.cshtml
@@ -9,13 +9,13 @@
 <div class="row" style="margin-top:-10px">
     <div class="col-md-12">
 
-        <div class="row" style="margin-top:-15px">
+        <div class="row" style="margin-top:-12px">
             <div class="col-md-12"style="height:60px;text-align:center">
-                <div class="card card-navy">
-                    <div class="card-header">
+                <div class="card" style="background-color:#001f3f">
+                    <div class="px-2 py-1">
                         <div class="row">
                             <div class="col-md-3">
-                                <h5 class=" text-bold float-left">
+                                <h5 class=" text-bold float-left text-white">
                                     Raw Material Supplier
                                 </h5>
                             </div>
@@ -31,7 +31,7 @@
 
                             </div>
                             <div class="col-md-3">
-                                <button class="btn btn-outline-warning btn-flat btn-sm float-right" id="addButton"><i class="fa fa-plus"></i> Create RM Supplier</button>
+                                <button class="btn btn-outline-warning btn-sm float-right" id="addButton"><i class="fa fa-plus"></i> Create RM Supplier</button>
                             </div>
                         </div>
                     </div>
@@ -40,9 +40,9 @@
         </div>
 
     </div>
-    <div class="col-md-12" style="margin-top:-10px">
+    <div class="col-md-12" style="margin-top:-15px">
         <div class="card">
-            <div class="card-body">
+            <div class="card-body" style="margin-top:-10px">
                 <div class="col-md-12" id="dataContainer">
 
                 </div>
