--- a/ERPWeb/Views/AgroConfiguration/GetRequisition.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetRequisition.cshtml
@@ -9,42 +9,19 @@
 
         @Html.AntiForgeryToken()
 
-        <div class="row" style="margin-top:-25px">
-            <div class="col-md-12">
-                <div class="card shadow card-navy">
-                    <div class="card-header shadow">
-                        <div class="row">
-
-                            <div class="col-md-12">
-                                <h5 class="text-center text-bold">
-                                    Raw Material Requsition List
-                                </h5>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-
-
 
 
         <div class="row" style="margin-top:-15px">
-            <div class="col-md-12">
-                <div class="card card-gray-dark">
-                    <div class="card-header">
-                        <div class="row justify-content-center">
-                            <div class="col-md-2">
-                                <h5 class="text-left">Search By</h5>
-                            </div>
-                            <div class="col-md-3">
+            <div class="col-md-12" >
+                <div class="card" style="background-color:#001f3f">
+                    <div class="px-2 py-1">
+                        <div class="row float-left">
+                            
+                            <div class="col-md-3 float-left">
                     
                                 <input type="text" name="search" id="txtReqCode" class="form-control form-control-sm" placeholder="Search By Requisition Code" onkeyup="tableFilter('#tblReqInfoData tbody tr',this)" />
                             </div>
-                            <div class="col-md-2">
+                            <div class="col-md-3">
                          
                                 <select class="form-control form-control-sm" id="ddlStatus">
                                     <option value="">--Status--</option>
@@ -56,7 +33,7 @@
                                 </select>
 
                             </div>
-                            <div class="col-md-2">
+                            <div class="col-md-3">
                      
                                 <div class="input-group input-group-sm ">
                                     <input type="text" class="form-control form-control-sm date-datePicker ctrl-changed" id="dptFromDate" placeholder="From Date" />
@@ -65,7 +42,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-2">
+                            <div class="col-md-3">
 
                                 <div class="input-group input-group-sm ">
                                     <input type="text" class="form-control form-control-sm date-datePicker ctrl-changed" id="dptToDate" placeholder="To Date"/>
@@ -81,10 +58,10 @@
         </div>
 
 
-        <div class="row">
+        <div class="row" style="margin-top:-3px">
             <div class="col-md-12" style="margin-top:-10px">
                 <div class="card">
-                    <div class="card-body">
+                    <div class="card-body" style="margin-top:-10px">
                         <div class="row">
                             <div class="col-md-12 text-sm" id="dataContainer">
                                 @*@{Html.RenderAction("GetRequisition",new {flag="List" });}*@
