--- a/ERPWeb/Views/AgroConfiguration/GetRequisitionProduction.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetRequisitionProduction.cshtml
@@ -7,40 +7,23 @@
     <div class="col-md-12">
 
         @Html.AntiForgeryToken()
-        <div class="row" style="margin-top:-25px">
+        <div class="row" style="margin-top:-20px">
             <div class="col-md-12">
-                <div class="card shadow card-navy">
-                    <div class="card-header shadow">
+                <div class="card" style="background-color:#001f3f">
+                    <div class="px-2 py-1">
                         <div class="row">
-                            <div class="col-md-3">
-                            </div>
-                            <div class="col-md-6">
-                                <h5 class="text-center text-bold">
-                                    Raw Material Requsition List
+                          
+                            <div class="col-md-2">
+                                <h5 class=" text-bold text-white">
+                                    RM Requsition List
                                 </h5>
                             </div>
-                            <div class="col-md-3">
-                                <a href="/AgroConfiguration/SaveRequisition" class="btn btn-outline-warning btn-sm float-lg-right" id="btnAddNew"><i class="fa fa-plus"></i> Requistion</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row" style="margin-top:-15px">
-            <div class="col-md-12">
-                <div class="card card-gray-dark">
-                    <div class="card-header">
-                        <div class="row justify-content-center">
                             <div class="col-md-2">
-                                <h5 class="text-right">Search By</h5>
-                            </div>
-                            <div class="col-md-2">
-                              
+
                                 <input type="text" name="search" id="txtReqCode" class="form-control form-control-sm" placeholder="Search By Requisition Code" onkeyup="tableFilter('#tblReqInfoData tbody tr',this)" />
                             </div>
-                            <div class="col-md-2">
-                                
+                            <div class="col-md-1">
+
                                 <select class="form-control form-control-sm" id="ddlStatus">
                                     <option value="">--Status--</option>
                                     <option value="Pending">Pending</option>
@@ -52,7 +35,7 @@
 
                             </div>
                             <div class="col-md-2">
-                            
+
                                 <div class="input-group input-group-sm ">
                                     <input type="text" class="form-control form-control-sm date-datePicker ctrl-changed" id="dptFromDate" placeholder="From Date" />
                                     <div class="input-group-prepend cursor-pointer remove-date dptFromDate" style="cursor:pointer">
@@ -61,7 +44,7 @@
                                 </div>
                             </div>
                             <div class="col-md-2">
-                              
+
                                 <div class="input-group input-group-sm ">
                                     <input type="text" class="form-control form-control-sm date-datePicker ctrl-changed" id="dptToDate" placeholder="To Date" />
                                     <div class="input-group-prepend remove-date dptToDate" style="cursor:pointer">
@@ -69,17 +52,27 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="col-md-3">
+                                <a href="/AgroConfiguration/SaveRequisition" class="btn btn-outline-warning btn-sm float-lg-right" id="btnAddNew"><i class="fa fa-plus"></i> Requistion</a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        @*<div class="row" style="margin-top:-15px">
+            <div class="col-md-12">
+                <div class="card card-gray-dark">
+                   
+                </div>
+            </div>
+        </div>*@
 
 
-        <div class="row">
+        <div class="row"style="margin-top:-4px">
             <div class="col-md-12" style="margin-top:-10px">
                 <div class="card">
-                    <div class="card-body">
+                    <div class="card-body"style="margin-top:-10px">
                         <div class="row">
                             <div class="col-md-12 text-sm" id="dataContainer" style="overflow-y:scroll">
                                 @*@{Html.RenderAction("GetRequisitionProduction", new { flag = "List" });}*@
