--- a/ERPWeb/Views/AgroConfiguration/GetReturnRawMaterialReportList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetReturnRawMaterialReportList.cshtml
@@ -4,37 +4,19 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row text-sm" style="margin-top:-20px">
+<div class="row text-sm" style="margin-top:-15px">
     <div class="col-md-12">
 
         <div class="row" style="margin-top:-5px">
             <div class="col-md-12">
-                <div class="card card-navy">
-                    <div class="card-header" style="text-align: center;">
+                <div class="card" style="background-color:#001f3f">
+                    <div class="px-2 py-1" style="text-align: center;">
                         <div class="row">
-                            <div class="col-md-3">
-                            </div>
-                            <div class="col-md-6">
-                                <h5 class="text-center text-bold">
-                                    Return RawMaterial Report List
+                            
+                            <div class="col-md-2">
+                                <h5 class="float-left text-bold text-white">
+                                    Return RM Report
                                 </h5>
-                            </div>
-                            <div class="col-md-3">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-        <div class="row" style="margin-top:-10px">
-            <div class="col-md-12">
-                <div class="card card-gray-dark">
-                    <div class="card-header">
-                        <div class="row" style="margin-left:-20px">
-                            <div class="col-md-1">
-                                <h6 class="text-left" style="font-size:25px">Search</h6>
                             </div>
 
                             <div class="col-md-2">
@@ -61,7 +43,7 @@
 
 
 
-                            <div class="col-md-2">
+                            <div class="col-md-1">
                                 <div class="input-group input-group-sm">
                                     <input type="text" class="form-control form-control-sm date-datePicker ctrl-changed" id="dptFromDate" placeholder="FromDate" />
                                     <div class="input-group-prepend cursor-pointer remove-date dptFromDate" style="cursor:pointer">
@@ -69,7 +51,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-2">
+                            <div class="col-md-1">
                                 <div class="input-group input-group-sm">
                                     <input type="text" class="form-control form-control-sm date-datePicker ctrl-changed" id="dptToDate" placeholder="ToDate" />
                                     <div class="input-group-prepend cursor-pointer remove-date dptToDate" style="cursor:pointer">
@@ -90,17 +72,23 @@
                                     </span>
                                 </div>
                             </div>
-
-
-
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="row" style="margin-top:-17px">
+            <div class="col-md-12">
+                <div class="card card-gray-dark">
+                    
                 </div>
             </div>
 
             <div class="col-md-12" style="margin-top:-10px">
                 <div class="card">
-                    <div class="card-body">
+                    <div class="card-body"style="margin-top:-10px">
                         <div class="col-md-12" id="dataContainer">
 
                         </div>
