--- a/ERPWeb/Views/AgroConfiguration/GetSalesReturnAdjustList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetSalesReturnAdjustList.cshtml
@@ -7,15 +7,24 @@
 <div class="row" style="margin-top:-10px">
     <div class="col-md-12">
 
-        <div class="row" style="margin-top:-15px">
+        <div class="row" style="margin-top:-12px">
             <div class="col-md-12">
-                <div class="card card-navy">
-                    <div class="card-header">
+                <div class="card" style="background-color:#001f3f">
+                    <div class="px-2 py-1">
                         <div class="row">
+
                             <div class="col-md-3">
+                                <h5 class="float-left text-bold text-white">Sales Return Adjust List</h5>
                             </div>
-                            <div class="col-md-6">
-                                <h5 class="text-center text-bold">Sales Return Adjust List</h5>
+                            <div class="col-md-2">
+
+                            </div>
+                            <div class="col-md-2">
+
+                                <input type="text" class="form-control form-control-sm" id="SearchAny" placeholder="search By invoice" />
+                            </div>
+                            <div class="col-md-2">
+
                             </div>
                             <div class="col-md-3">
                                 <a href="/AgroConfiguration/SalesReturnAdjustCreate" class="btn btn-outline-warning btn-sm float-lg-right" id="createButton"><i class="fa fa-plus"></i> Create New SalesReturnAdjust</a>
@@ -31,42 +40,13 @@
         <div class="row" style="margin-top:-15px">
             <div class="col-md-12">
                 <div class="card card-gray-dark">
-                    <div class="card-header">
-                        <div class="row ">
-                            <div class="col-md-2">
-                                <h5 class="text-center">Search By</h5>
-                            </div>
-                            <div class="col-md-2">
-
-                                <input type="text" class="form-control form-control-sm" id="SearchAny" placeholder="search By invoice" />
-                            </div>
-
-                            @*<div class="col-md-2">
-
-                                <div class="input-group input-group-sm ">
-                                    <input type="text" class="form-control form-control-sm date-datePicker" id="dptFromDate" placeholder="FromDate" />
-                                    <div class="input-group-prepend cursor-pointer remove-date dptFromDate" style="cursor:pointer">
-                                        <span class="input-group-text">&#10008;</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-2">
-
-                                <div class="input-group input-group-sm ">
-                                    <input type="text" class="form-control form-control-sm date-datePicker" id="dptToDate" placeholder="ToDate" />
-                                    <div class="input-group-prepend remove-date dptToDate" style="cursor:pointer">
-                                        <span class="input-group-text">&#10008;</span>
-                                    </div>
-                                </div>
-                            </div>*@
-                        </div>
-                    </div>
+                    
                 </div>
             </div>
 
-            <div class="col-md-12" style="margin-top:-10px">
+            <div class="col-md-12" style="margin-top:-13px">
                 <div class="card">
-                    <div class="card-body">
+                    <div class="card-body"style="margin-top:-10px">
                         <div class="col-md-12" id="dataContainer">
 
                         </div>
