--- a/ERPWeb/Views/AgroConfiguration/GetSalesReturnReportList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetSalesReturnReportList.cshtml
@@ -5,39 +5,20 @@
 }
 
 
-<div class="row text-sm" style="margin-top:-20px">
+<div class="row text-sm" style="margin-top:-15px">
     <div class="col-md-12">
 
         <div class="row" style="margin-top:-5px">
             <div class="col-md-12">
-                <div class="card card-navy">
-                    <div class="card-header" style="text-align: center;">
+                <div class="card" style="background-color:#001f3f">
+                    <div class="px-2 py-1" style="text-align: center;">
                         <div class="row">
-                            <div class="col-md-3">
-                            </div>
-                            <div class="col-md-6">
-                                <h5 class="text-center text-bold">
-                                    Sales Return Report List
+
+                            <div class="col-md-2">
+                                <h5 class="text-center text-bold text-white">
+                                    S.Return Report
                                 </h5>
                             </div>
-                            <div class="col-md-3">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-        <div class="row" style="margin-top:-10px">
-            <div class="col-md-12">
-                <div class="card card-gray-dark">
-                    <div class="card-header">
-                        <div class="row" style="margin-left:-20px">
-                            <div class="col-md-1">
-                                <h6 class="text-left" style="font-size:25px">Search</h6>
-                            </div>
-
                             <div class="col-md-2">
 
                                 <input type="text" class="form-control form-control-sm" id="SearchAny" placeholder="search By invoice" />
@@ -94,17 +75,19 @@
                                     </span>
                                 </div>
                             </div>
-
-
-
+                            
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
 
+
+        <div class="row" style="margin-top:-3px">
+            
             <div class="col-md-12" style="margin-top:-10px">
                 <div class="card">
-                    <div class="card-body">
+                    <div class="card-body"style="margin-top:-10px">
                         <div class="col-md-12" id="dataContainer">
 
                         </div>
