--- a/ERPWeb/Views/AgroConfiguration/ProductPriceList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/ProductPriceList.cshtml
@@ -8,19 +8,25 @@
     <div class="col-md-12">
 
 
-        <div class="row" style="margin-top:-15px">
+        <div class="row" style="margin-top:-12px">
             <div class="col-md-12">
-                <div class="card card-navy">
-                    <div class="card-header" style="text-align: center;">
+                <div class="card" style="background-color:#001f3f">
+                    <div class="px-2 py-1" style="text-align: center;">
                         <div class="row">
+                            <div class="col-md-2">
+                                <h5 class="text-bold float-left text-white">
+                                    Product Price List
+                                </h5>
+                            </div>
                             <div class="col-md-3">
+
+                            </div>
+                            <div class="col-md-2">
 
                                 <input type="text" class="form-control form-control-sm" id="SearchAny" placeholder="Search By Product" />
                             </div>
-                            <div class="col-md-6">
-                                <h5 class="text-center text-bold">
-                                    Product Price List
-                                </h5>
+                            <div class="col-md-2">
+
                             </div>
                             <div class="col-md-3">
                                 <a href="/AgroConfiguration/CreateProductPrice" class="btn btn-outline-warning btn-sm float-lg-right" id="btnAddNew"><i class="fa fa-plus"></i>Create ProductPrice</a>
@@ -33,10 +39,10 @@
 
 
 
-        <div class="row">
+        <div class="row" style="margin-top:-3px">
             <div class="col-md-12" style="margin-top:-10px">
                 <div class="card ">
-                    <div class="card-body">
+                    <div class="card-body"style="margin-top:-10px">
                         <div class="col-md-12" id="dataContainer">
 
                         </div>
