--- a/ERPWeb/Views/AgroConfiguration/RawMaterialReturnList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/RawMaterialReturnList.cshtml
@@ -10,18 +10,24 @@
 
                     @Html.AntiForgeryToken()
                     <div class="tab-pane fade show active" id="custom-tabs-two-RawMaterialReturnList" role="tabpanel" aria-labelledby="custom-tabs-two-RawMaterialReturnList-tab">
-                        <div class="row" style="margin-top:-15px">
+                        <div class="row" style="margin-top:-12px">
                             <div class="col-md-12">
-                                <div class="card card-navy">
-                                    <div class="card-header">
+                                <div class="card" style="background-color:#001f3f">
+                                    <div class="px-2 py-1">
                                         <div class="row">
-                                            <div class="col-md-3 ">
+                                            <div class="col-md-3">
+                                                <h5 class="text-bold text-white">
+                                                    RM Return
+                                                </h5>
+                                            </div>
+                                            <div class="col-md-2 ">
+
+                                            </div>
+                                            <div class="col-md-2 ">
                                                 <input type="text" class="form-control form-control-sm" id="searchByAny" placeholder="Search by RM" />
                                             </div>
-                                            <div class="col-md-6">
-                                                <h5 class="text-center text-bold">
-                                                    List Of Raw Material Return
-                                                </h5>
+                                            <div class="col-md-3 ">
+
                                             </div>
 
                                         </div>
@@ -47,9 +53,9 @@
                                     
                                 </div>
                             </div>*@
-                            <div class="col-md-12" style="margin-top:-10px">
+                            <div class="col-md-12" style="margin-top:-13px">
                                 <div class="card">
-                                    <div class="card-body">
+                                    <div class="card-body"style="margin-top:-10px">
                                         <div class="col-md-12" id="dataContainer">
                                             
                                         </div>
