--- a/ERPWeb/Views/AgroConfiguration/SalesReturn.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/SalesReturn.cshtml
@@ -41,8 +41,8 @@
         <!--<div class="card-body  mb-5"--> @*style="background-color:#e7f1f6"*@ <!--id="cardWithOutRequisition">-->
         <div class="row">
             <div class="col-md-12" style="margin-top:-15px">
-                <div class="card card-gray-dark">
-                    <div class="card-header">
+                <div class="card" style="background-color:#001f3f">
+                    <div class="px-2 py-1">
                         <div class="row">
                             @*<div class="col-md-1">
                                     <h5 class="text-start">
