--- a/ERPWeb/Views/AgroConfiguration/SalesReturnAdjustCreate.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/SalesReturnAdjustCreate.cshtml
@@ -84,7 +84,7 @@
         <div class="row">
             <div class="col-md-12" style="margin-top:-10px">
                 <div class="card">
-            <div class="card-body">
+            <div class="card-body" style="margin-top:-10px">
                 <div class="col-md-12" id="dataContainer">
 
                 </div>
