--- a/ERPWeb/Views/AgroConfiguration/SalesReturnList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/SalesReturnList.cshtml
@@ -8,37 +8,18 @@
     <div class="col-md-12">
 
 
-        <div class="row" style="margin-top:-15px">
+        <div class="row" style="margin-top:-12px">
             <div class="col-md-12">
-                <div class="card card-navy">
-                    <div class="card-header" style="text-align: center;">
+                <div class="card" style="background-color:#001f3f">
+                    <div class="px-2 py-1" style="text-align: center;">
                         <div class="row">
-                            <div class="col-md-3">
-                            </div>
-                            <div class="col-md-6">
-                                <h5 class="text-center text-bold">
+
+                            <div class="col-md-2">
+                                <h5 class="float-left text-bold text-white">
                                     Sales Return List
                                 </h5>
                             </div>
-                            <div class="col-md-3">
-                                <a href="/AgroConfiguration/SalesReturn" class="btn btn-outline-warning btn-sm float-lg-right" id="btnAddNew"><i class="fa fa-plus"></i> Create SalesReturn</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
 
-
-
-        <div class="row" style="margin-top:-15px">
-            <div class="col-md-12">
-                <div class="card card-gray-dark">
-                    <div class="card-header">
-                        <div class="row justify-content-center">
-                            <div class="col-md-2">
-                                <h5 class="text-right">Search By</h5>
-                            </div>
                             <div class="col-md-2">
 
                                 <input type="text" class="form-control form-control-sm" id="SearchAny" placeholder="search By invoice" />
@@ -56,15 +37,31 @@
                                     <option value="NOTADJUST">NOTADJUST</option>
                                 </select>
                             </div>
+                            <div class="col-md-1">
+
+                            </div>
+                            <div class="col-md-3">
+                                <a href="/AgroConfiguration/SalesReturn" class="btn btn-outline-warning btn-sm float-lg-right" id="btnAddNew"><i class="fa fa-plus"></i> Create SalesReturn</a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-12" style="margin-top:-10px">
+
+
+
+        @*<div class="row" style="margin-top:-15px">
+            <div class="col-md-12">
+                <div class="card card-gray-dark">
+                   
+                </div>
+            </div>
+        </div>*@
+        <div class="row"style="margin-top:-3px">
+            <div class="col-md-12" style="margin-top:-11px">
                 <div class="card ">
-                    <div class="card-body">
+                    <div class="card-body"style="margin-top:-10px">
                         <div class="col-md-12" id="dataContainer">
 
                         </div>
