--- a/ERPWeb/Views/AgroConfiguration/_GetFinishGoodRecipeEdit.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetFinishGoodRecipeEdit.cshtml
@@ -19,12 +19,12 @@
 
         @*<td style="width:15%"><input type="text" placeholder="Qty" name="quantity" id="txtProductQty" class="form-control form-control-sm" dataval="@info.FinishGoodProductName" /> </td>*@
         <td style="width:15%"><b>@info.FinishGoodProductName</b></td>
-        <td style="width:13%">Product Qty</td>
-        <td style="width:5%"><b>@info.FGRQty</b></td>
-        <td style="width:10%">Product Unit</td>
+        <td style="width:9%"> Qty</td>
+        <td style="width:8%"><b>@info.FGRQty</b></td>
+        <td style="width:8%">Unit</td>
         <td style="width:6%"><b>@info.UnitName</b></td>
         <td style="width:6%" class="hide"><b>@info.UnitId</b></td>
-        <td style="width:10%">Receipe Status</td>
+        <td style="width:10%">Status</td>
         <td style="width:20%">
             @info.Status
 
