--- a/ERPWeb/Views/AgroConfiguration/_GetStockProductFinishGoodList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetStockProductFinishGoodList.cshtml
@@ -2,59 +2,61 @@
 @{
     int sl = 0;
 }
-<div class="col-md-12">
-    <table class="table table-responsive-lg table-striped text-sm">
-        <thead class="btn-dark">
-            <tr>
-                <th>Sl</th>
-                <th>Product Name </th>
-                <th>Recipe BatchCode</th>
-                <th>Product Details</th>
-                @*<th>Recipe Unit</th>*@
-                <th>Production Total</th>
-                <th>Sales Total</th>
-                <th>Return Total </th>
-                <th>Current Pices </th>
+<div class="row">
+    <div class="col-md-12">
+        <table class="table table-bordered table-striped table-hover">
+            <thead class="btn-dark">
+                <tr class="text-center">
+                    <th>Sl</th>
+                    <th>Product Name </th>
+                    <th>Recipe BatchCode</th>
+                    <th>Product Details</th>
+                    @*<th>Recipe Unit</th>*@
+                    <th>Production Total</th>
+                    <th>Sales Total</th>
+                    <th>Return Total </th>
+                    <th>Current Pices </th>
 
-                @*<th>Action</th>*@
+                    @*<th>Action</th>*@
 
-            </tr>
-
-        </thead>
-        <tbody>
-            @if (Model.Count() > 0)
-            {
-
-
-                foreach (var item in Model)
-                {
-                    sl++;
-                    <tr>
-                        <td>@sl</td>
-                        <td>@item.FinishGoodProductName</td>
-                        <td>@item.ReceipeBatchCode</td>
-                        <td>@item.FGRQty@(" ("+@item.UnitName+" )")</td>
-                        @*<td>@item.UnitName</td>*@
-                        <td>@item.ProductionTotal</td>
-                        <td>@item.SalesTotal</td>
-                        <td>@item.ReturnTotal</td>
-                        <td>@item.CurrentStock</td>
-
-                        @*<td><a href="#" class="btn btn-secondary btn-sm data-item-detail" data-item-detail="@item.FinishGoodProductionBatch"><i class="fas fa-eye"></i>View</a></td>*@
-
-                    </tr>
-
-                }
-            }
-            else
-            {
-                <tr>
-                    <td colspan="12" class="text-center">Data Not Found</td>
                 </tr>
-            }
 
-        </tbody>
+            </thead>
+            <tbody>
+                @if (Model.Count() > 0)
+                {
 
-    </table>
 
+                    foreach (var item in Model)
+                    {
+                        sl++;
+                        <tr class="text-center">
+                            <td>@sl</td>
+                            <td>@item.FinishGoodProductName</td>
+                            <td>@item.ReceipeBatchCode</td>
+                            <td>@item.FGRQty@(" (" + @item.UnitName + " )")</td>
+                            @*<td>@item.UnitName</td>*@
+                            <td>@item.ProductionTotal</td>
+                            <td>@item.SalesTotal</td>
+                            <td>@item.ReturnTotal</td>
+                            <td>@item.CurrentStock</td>
+
+                            @*<td><a href="#" class="btn btn-secondary btn-sm data-item-detail" data-item-detail="@item.FinishGoodProductionBatch"><i class="fas fa-eye"></i>View</a></td>*@
+
+                        </tr>
+
+                    }
+                }
+                else
+                {
+                    <tr>
+                        <td colspan="12" class="text-center">Data Not Found</td>
+                    </tr>
+                }
+
+            </tbody>
+
+        </table>
+
+    </div>
 </div>
