--- a/ERPWeb/Views/AgroConfiguration/_PaymentHistoryDetails.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_PaymentHistoryDetails.cshtml
@@ -12,10 +12,10 @@
     <tr>
         <td style="width:13%">Invoice No</td>
         <td style="width:15%"><b>@info.InvoiceNo</b></td>
-        <td style="width:18%">Invoice Date</td>
-        <td style="width:20%"><b>@info.InvoiceDate</b></td>
+        <td style="width:7%"> Date</td>
+        <td style="width:16%"><b>@info.InvoiceDate.Value.ToString("dd-MMM-yyyy")</b></td>
         <td style="width:13%">Total Amount</td>
-        <td style="width:20%"><b>@info.TotalAmount</b></td>
+        <td style="width:14%"><b>@info.TotalAmount</b></td>
         <td style="width:13%">Paid Amount</td>
         <td style="width:20%"><b>@info.PaidAmount</b></td>
         <td style="width:13%" class="hide">Due Amount</td>
@@ -38,7 +38,7 @@
             sl = sl + 1;
             <tr>
                 <td class="text-center">@sl</td>
-                <td class="text-center">@item.PaymentDate</td>
+                <td class="text-center">@item.PaymentDate.ToString("dd-MMM-yyyy")</td>
                 <td class="text-center text-bold">@item.PaymentAmount</td>
                 <td class="text-center">@item.Remarks</td>
             </tr>
