--- a/ERPWeb/Views/AgroConfiguration/_SalesCommission.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_SalesCommission.cshtml
@@ -42,7 +42,7 @@
                 @*<td class="text-center hide">@item.CommissionOnProductOnSalesId</td>*@
 
                 <td class="text-center">
-                    <a href="#" class="btn btn-outline-warning data-item-detail" title="view" data-item-detail="@item.CommissionOnProductOnSalesId" style="line-height:1">
+                    <a href="#" class="btn btn-outline-warning btn-sm data-item-detail" title="view" data-item-detail="@item.CommissionOnProductOnSalesId" style="line-height:1">
                         <i class="fas fa-eye"></i>
                     </a>
                 </td>
